# easshy

./: README.md  easshy.py  pyproject.toml  requirements.txt  setup.py
src/easshy/: __init__.py  easshy.py
